--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -9209,3 +9209,13 @@ legend {
 .list-group-item:hover {
   background-color: #1c1e22;
 }
+
+
+
+/*new styles*/
+/* Show it is fixed to the top */
+body{
+  min-height: 75rem;
+  padding-top: 4.5rem;
+}
+
