--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -30,13 +30,14 @@
         </li>
         <li class="nav-item" [routerLinkActive]="['active']" routerLinkActiveOptions="{exact: true}"
             *ngIf="authService.loggedIn()">
-          <a class="nav-link" href="" (click)="logout()">Logout</a>
+          <a class="nav-link" href="" (click)="logout(); $event.preventDefault();">Logout</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['active']" routerLinkActiveOptions="{exact: true}"
             *ngIf="!authService.loggedIn()">
           <a class="nav-link" routerLink="/register">Register</a>
         </li>
       </ul>
+
     </div>
   </div>
 </nav>
