--- a/client/src/app/components/blog/blog.component.html
+++ b/client/src/app/components/blog/blog.component.html
@@ -1,5 +1,5 @@
 <button type="button" class="btn btn-primary" *ngIf="!newPost" (click)="newBlogForm()">New Post</button>
-<button type="button" class="btn btn-info">Reload</button>
+<button type="button" class="btn btn-info" [disabled]="loadingBlogs" (click)="reloadBlogs()">Reload</button>
 
 <br>
 <br>
@@ -27,8 +27,9 @@
   </div>
   <div class="form-group">
     <label>Blog body</label>
-    <textarea type="text" rows="8" cols="80" class="form-control" name="body" placeholder="*Blog body" autocomplete="off"
-           formControlName="body"
+    <textarea type="text" rows="8" cols="80" class="form-control" name="body" placeholder="*Blog body"
+              autocomplete="off"
+              formControlName="body"
               [ngClass]="{'is-invalid': (form.controls.body.errors && form.controls.body.dirty), 'is-valid': (!form.controls.body.errors)}"></textarea>
     <div class="invalid-feedback" *ngIf="form.controls.body.errors?.required && form.controls.body.dirty">
       Body text is required
@@ -44,24 +45,24 @@
 </form>
 
 <div *ngIf="!newPost">
-<div class="card">
-  <div class="card-header">
-    <h2>Special title treatment</h2>
-  </div>
-  <div class="card-body">
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+  <div class="card" *ngFor="let blog of blogs;">
+    <div class="card-header">
+      <h2>{{blog.title}}</h2>
+    </div>
+    <div class="card-body">
+      <p class="card-text">{{blog.body}}</p>
 
-    <div class="divider"></div>
-    <p><strong>Posted By:</strong> jasdfljas</p>
-    <p><strong>Date:</strong> jasdfljas</p>
-    <p><strong>Likes:</strong> 33</p>
-    <p><strong>Dislikes:</strong> 33</p>
-  </div>
-  <div class="card-footer">
-    <button type="button" class="btn btn-info">Edit</button>
-    <button type="button" class="btn btn-danger">Delete</button>
+      <div class="divider"></div>
+      <p *ngIf="blog.createdBy"><strong>Posted By:</strong> {{blog.createdBy}}</p>
+      <p *ngIf="blog.createdAt"><strong>Date:</strong> {{blog.createdAt | date: 'dd-MMM-yyyy hh:mm a'}}</p>
+      <p *ngIf="blog.likes"><strong>Likes:</strong> {{blog.likes}}</p>
+      <p *ngIf="blog.dislikes"><strong>Dislikes:</strong> {{blog.dislikes}}</p>
+    </div>
+    <div class="card-footer">
+      <a [routerLink]="['/edit-blog/', blog._id]" class="btn btn-info" *ngIf="username===blog.createdBy">Edit</a>
+      <a [routerLink]="['/delete-blog/', blog._id]" class="btn btn-danger" *ngIf="username===blog.createdBy">Delete</a>
 
-    <span class="dropdown">
+      <span class="dropdown" *ngIf="username !== blog.createdBy">
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
         Likes
       </button>
@@ -73,7 +74,7 @@
     </span>
 
 
-    <span class="dropdown">
+      <span class="dropdown" *ngIf="username !== blog.createdBy">
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
         Dislikes
       </button>
@@ -84,18 +85,18 @@
       </div>
     </span>
 
+    </div>
+
+    <ul class="list-group">
+      <li class="list-group-item">
+        <button type="button" class="btn btn-warning">Post comment</button>
+
+        <!--<form >
+          <textarea name="" id="" cols="30" rows="10" class="form-control"></textarea>
+          <button type="submit" class="btn btn-info">Post comment</button>
+          <button type="button" class="btn btn-danger">Cancel</button>
+        </form>-->
+      </li>
+    </ul>
   </div>
-
-  <ul class="list-group">
-    <li class="list-group-item">
-      <button type="button" class="btn btn-warning">Post comment</button>
-
-      <!--<form >
-        <textarea name="" id="" cols="30" rows="10" class="form-control"></textarea>
-        <button type="submit" class="btn btn-info">Post comment</button>
-        <button type="button" class="btn btn-danger">Cancel</button>
-      </form>-->
-    </li>
-  </ul>
-</div>
 </div>
