--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,10 @@
-<p>
-  dashboard works!
-</p>
+<div class="jumbotron">
+  <h1 class="display-3">Mean App Angular 5</h1>
+  <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo,
+    tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+
+  <a routerLink="/blog" class="btn btn-primary btn-block btn-lg">
+    Go to Blog =>
+  </a>
+
+</div>
