--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,3 +1,15 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron">
+  <h1 class="display-3">Mean App Angular 5</h1>
+  <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo,
+    tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+  <p>
+  <span class="nav-item" [routerLinkActive]="['active']" routerLinkActiveOptions="{exact: true}"
+        *ngIf="!authService.loggedIn()">
+    <a class="btn btn-info" routerLink="/login">Login</a>
+  </span>
+    <span class="nav-item" [routerLinkActive]="['active']" routerLinkActiveOptions="{exact: true}"
+          *ngIf="!authService.loggedIn()">
+    <a class="btn btn-primary" routerLink="/register">Register</a>
+  </span>
+  </p>
+</div>
